--- a/src/app/pages/personajes/personajes.page.html
+++ b/src/app/pages/personajes/personajes.page.html
@@ -1,13 +1,41 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>personajes</ion-title>
+    <ion-title>Personajes</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">personajes</ion-title>
+      <ion-title size="large">Personajes</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <div class="card-container">
+    <ion-card>
+      <ion-item [routerLink]="'/psj1'">
+        <ion-label>habichuela</ion-label>
+      </ion-item>
+      <img src="../assets/sonic1.png" alt="habichuela" class="imagen1" />
+    </ion-card>
+
+    <ion-card>
+      <ion-item [routerLink]="'/psj2'">
+        <ion-label>pepe</ion-label>
+      </ion-item>
+      <img src="../assets/shadow1.webp" alt="pepe" class="imagen2" />
+    </ion-card>
+
+    <ion-card>
+      <ion-item [routerLink]="'/psj3'">
+        <ion-label>pepito</ion-label>
+      </ion-item>
+      <img src="../assets/gerald.webp" alt="pepito" class="imagen3" />
+    </ion-card>
+  </div>
+
+  
+
+
+
 </ion-content>
