--- a/src/app/pages/personajes/personajes.page.html
+++ b/src/app/pages/personajes/personajes.page.html
@@ -13,24 +13,33 @@
 
   <div class="card-container">
     <ion-card>
-      <ion-item [routerLink]="'/psj1'">
-        <ion-label>habichuela</ion-label>
+      <ion-item>
+        <H2>Sonic The Hedgehog</H2>
       </ion-item>
       <img src="../assets/sonic1.png" alt="habichuela" class="imagen1" />
+      <ion-button routerLink="/psj1" expand="full" color="primary">
+        Ver Detalles
+      </ion-button>
     </ion-card>
 
     <ion-card>
-      <ion-item [routerLink]="'/psj2'">
-        <ion-label>pepe</ion-label>
+      <ion-item>
+        <H2>Shadow the Hedgehog</H2>
       </ion-item>
       <img src="../assets/shadow1.webp" alt="pepe" class="imagen2" />
+      <ion-button routerLink="/psj2" expand="full" color="danger">
+        Ver Detalles
+      </ion-button>
     </ion-card>
 
     <ion-card>
-      <ion-item [routerLink]="'/psj3'">
-        <ion-label>pepito</ion-label>
+      <ion-item>
+        <h2>Professor Gerald Robotnik</h2>
       </ion-item>
       <img src="../assets/gerald.webp" alt="pepito" class="imagen3" />
+      <ion-button routerLink="/psj3" expand="full" color="light">
+        Ver Detalles
+      </ion-button>
     </ion-card>
   </div>
 
