--- a/src/app/pages/psjdetalle/psj1/psj1.page.html
+++ b/src/app/pages/psjdetalle/psj1/psj1.page.html
@@ -1,13 +1,32 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>psj1</ion-title>
+    <ion-title>Sonic The Hedgehog</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">psj1</ion-title>
+      <ion-title size="large">Sonic The Hedgehog</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <div class="card-container">
+    <ion-card>
+      <img src="../assets/sonic1.png" alt="habichuela" class="imagen1"/>
+      <ion-item>
+        <ion-label>
+          Sonic the Hedgehog es el protagonista principal de la serie de películas Sonic the Hedgehog producida por Paramount Pictures y sus spin-offs. 
+          Es un erizo alienígena antropomórfico con supervelocidad que proviene de Mobius.
+        </ion-label>
+      </ion-item>
+      <ion-button routerLink="/personajes" expand="full" color="primary">
+        Volver Atrás
+      </ion-button>
+    </ion-card>
+    
+  </div>
+
+
+  
 </ion-content>
