--- a/src/app/pages/psjdetalle/psj3/psj3.page.html
+++ b/src/app/pages/psjdetalle/psj3/psj3.page.html
@@ -1,13 +1,31 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>psj3</ion-title>
+    <ion-title>Professor Gerald Robotnik</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">psj3</ion-title>
+      <ion-title size="large">Professor Gerald Robotnik</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <div class="card-container">
+    <ion-card>
+      <img src="../assets/gerald.webp" alt="habichuela" class="imagen1"/>
+      <ion-item>
+        <ion-label>
+          El Profesor Gerald Robotnik 
+          es un personaje que aparece en la serie de películas Sonic the Hedgehog y sus spin-offs producidos por Paramount Pictures. 
+          Fue un científico humano y el abuelo de Maria Robotnik y el Dr. Ivo Robotnik. 
+          Reclutado para participar en el secreto Proyecto Shadow de G.U.N., Gerald lideró la vigilancia del alienígena, Shadow the Hedgehog, quien poseía una enorme cantidad de energía Caos. 
+        
+        </ion-label>
+      </ion-item>
+      <ion-button routerLink="/personajes" expand="full" color="light">
+        Volver Atrás
+      </ion-button>
+    </ion-card>
+  </div>
 </ion-content>
