--- a/src/app/pages/vida/vida.page.html
+++ b/src/app/pages/vida/vida.page.html
@@ -1,13 +1,29 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>vida</ion-title>
+    <ion-title>Pagina Inicial</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">vida</ion-title>
+      <ion-title size="large">Pagina Inicial</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  
+    <ion-card>
+     
+      
+
+      
+       
+        <iframe width="auto" height="auto" src="https://www.youtube.com/embed/7eM6CTUpGx4?si=P8vielZaOgItBOFV" title="YouTube video player" frameborder="0" allow="accelerometer; 
+        autoplay; clipboard-write; 
+        encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      
+    </ion-card>
+
+
+
 </ion-content>
