--- a/src/app/pages/informacion/informacion.page.html
+++ b/src/app/pages/informacion/informacion.page.html
@@ -1,13 +1,35 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>informacion</ion-title>
+    <ion-title>Sonic The Hedgehog</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">informacion</ion-title>
+      <ion-title size="large">Sonic The Hedgehog</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <div class="card-container">
+    <ion-card>
+      <img src="../assets/poster2.jpg" alt="habichuela" class="imagen1"/>
+      <ion-item>
+        <ion-label>
+          Sonic the Hedgehog 3 es una película de acción en vivo basada en la serie Sonic the Hedgehog y la secuela de la película Sonic the Hedgehog 2 de 2022. 
+          Es la tercera entrega de la serie de películas Sonic the Hedgehog producida por Paramount Pictures, y se estrenó el 20 de diciembre de 2024.
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          Siendo una adaptación libre del videojuego Sonic Adventure 2 (2001) y tomando algo de inspiración de Shadow the Hedgehog (2005), 
+          la película sigue al equipo Sonic mientras enfrentan el regreso y el último plan del Dr. Robotnik, todo mientras un misterioso adversario emerge.
+        </ion-label>
+      </ion-item>
+    </ion-card>
+    
+  </div>
+
+
+  
 </ion-content>
