--- a/src/app/pages/momentos/momentos.page.html
+++ b/src/app/pages/momentos/momentos.page.html
@@ -1,13 +1,51 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>momentos</ion-title>
+    <ion-title>Momentos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">momentos</ion-title>
+      <ion-title size="large">Momentos</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <div class="card-container">
+    <ion-card>
+      <ion-item>
+        <H2>You're a Colorful Bunch</H2>
+      </ion-item>
+      <img src="../assets/colorful.png" alt="habichuela" class="imagen1"/>
+      <ion-button routerLink="/momento1" expand="full" color="primary">
+        Ver Momento
+      </ion-button>
+    </ion-card>
+
+    <ion-card>
+      <ion-item>
+        <H2>Super Sonic vs Super Shadow</H2>
+      </ion-item>
+      <img src="../assets/svs.png" alt="pepe" class="imagen2" />
+      <ion-button routerLink="/momento2" expand="full" color="primary">
+        Ver Momento
+      </ion-button>
+    </ion-card>
+
+    <ion-card>
+      <ion-item>
+        <h2>Maria and Shadow</h2>
+      </ion-item>
+      <img src="../assets/maria.png" alt="pepito" class="imagen3" /> <!-- diablo diosmio pq me mataron a la muchacha-->
+      <ion-button routerLink="/momento3" expand="full" color="primary">
+        Ver Momento
+      </ion-button>
+    </ion-card>
+  </div>
+
+ 
+  
+
+
+
 </ion-content>
