--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,20 +1,20 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Personajes</ion-title>
+    <ion-title>Sonic The Hedgehog 3</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Personajes</ion-title>
+      <ion-title size="large">Sonic The Hedgehog 3</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div class="card-container">
     <ion-card>
       <ion-item>
-        <H2>Sonic The Hedgehog</H2>
+        <H2>Sonic The Hedgehog 3</H2>
       </ion-item>
       <img src="../assets/poster.jpg" alt="habichuela" class="imagen1" />
     </ion-card>
